# bms

./: .gitignore  CMakeLists.txt  README.md  cross-compile-2-pi.sh  main.cpp  requirements.txt  setup_mqtt_secure.sh  uplfp48_leitura.csv
.devcontainer/: Dockerfile  Dockerfile.arm64  compose.yml  devcontainer.json  docker-compose.rpi.yml  docker-compose.yml
.devcontainer/mosquitto/certs/: bms_broker.key
.devcontainer/mosquitto/config/: passwordfile
app/: CMakeLists.txt
app/inc/: batch_pool.hpp  batch_structures.hpp  db_consumer.hpp  db_publisher.hpp  estimators.hpp  influxdb.hpp  measurement_bus.hpp  modbus_reader.hpp  normalizer.hpp  periodic_task.hpp  safe_queue.hpp  soc.hpp  soh.hpp  temp.hpp  temperature.hpp  temperature_console.hpp  voltage.hpp  voltage_current.hpp
app/inc/controllers/: data_logger_ctrl.hpp  influxdb_ctrl.hpp  mqtt_ctrl.hpp
app/inc/services/: data_logger_service.hpp  influxdb_service.hpp  logging_service.hpp  modbus_service.hpp  mpsc_ring_service.hpp  mqtt_service.hpp  queue_service.hpp  spsc_ring_service.hpp
app/src/: db_consumer.cpp  db_publisher.cpp  influxdb.cpp  main.cpp  modbus_reader.cpp  normalizer.cpp  soc.cpp  soh.cpp  temperature.cpp  temperature_console.cpp  voltage_current.cpp
app/src/controllers/: bms_controller.cpp  data_logger_ctrl.cpp  influxdb_ctrl.cpp  main.cpp  mqtt_ctrl.cpp
app/src/services/: CMakeLists.txt  data_logger_service.cpp  influxdb_service.cpp  modbus_service.cpp  mqtt_service.cpp
bms-companion/: CMakeLists.txt  README.md  output.json
bms-companion/inc/: battery_snapshot.hpp  db_task.hpp  latest_battery_state.hpp  latest_regatron_state.hpp  modbus_codec.hpp  mqtt_control_task.hpp  mqtt_task.hpp  regatron_command_state.hpp  regatron_state.hpp  regatron_task.hpp  rs485_task.hpp  snapshot_to_lp.hpp
bms-companion/src/: db_task.cpp  main.cpp  modbus_codec.cpp  mqtt_control_task.cpp  mqtt_task.cpp  regatron_task.cpp  rs485_task.cpp  snapshot_to_lp.cpp
certs/: bms_broker.crt
cmake/: toolchain-armhf.cmake
config/: conf.json  config.hpp.in  openssl.cnf  ssl.md
config/certs/mqtt/: ca.crt  pi.crt  pi.key  pi.pem
config/grafana/: README.md
config/grafana/dashboards/: bms-data-blocks.json
config/grafana/provisioning/dashboards/: default.yml
config/influxdb3/: token.json
config/influxdb3/core/data/node0/catalog/v2/: snapshot
config/influxdb3/core/data/node0/wal/: 00000000001.wal  00000000002.wal  00000000003.wal  00000000004.wal  00000000005.wal  00000000006.wal
config/influxdb3/explorer/db/: sqlite.db
config/mosquitto/certs/: bms_broker.crt  bms_broker.key  broker.crt  broker.key  ca.key  ca.srl
config/mosquitto/certs/clients/node-0/: ca.crt  node-0.crt  node-0.key  node-0.pem
config/mosquitto/certs/clients/node-1/: node-1.crt  node-1.key  node-1.pem
config/mosquitto/config/: mosquitto.conf  passwordfile
docs/: soc_soh_pipeline.md
lib/modbuspp/: modbus.hpp
pyApp/: sample_rate.py
rasp/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: cross-compile-2-pi.sh  cross-compile-img.sh  get_token.sh  modbus_server.sh  mqtt_new_client.sh  pos-setup.sh  pos_setup.sh  pre_setup.sh  rasp-pre_setup.sh  read_uplfp48_modbus.py  run_pi.sh  sample_rate.py  setup_mqtt_secure.sh  setup_schema.sh  split_32bit.sh  uplfp48_leitura.csv
tests/: CMakeLists.txt  test_data_logger.cc  test_influxdb.cc  test_modbus.cc  test_mqtt.cc
utils/: bms-data-graph.json  rtc_sync.py
utils/modbus_server/: server_config.json
utils/mqtt_messages/: config.json
utils/old/app/src/controllers/: influxdb_ctrl.cpp
utils/old/app/src/services/: CMakeLists.txt  data_logger_service.cpp  influxdb_service.cpp
utils/old/tests/: CMakeLists.txt  test_influxdb.cc
utils/pattern/: file_pattern.cpp  file_pattern.hpp
